fix html validations

--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
 <body>
   <div class="card">
     <div class="flex-item">
-      <img src="images/bg-pattern-card.svg" />
+      <img src="images/bg-pattern-card.svg" alt="BG Pattern" />
       <div class="profilepic">
-        <img src="images/image-victor.jpg" />
+        <img src="images/image-victor.jpg" alt="Victor" />
       </div>
-      <section class="card-info">
+      <div class="card-info">
         <p class="ci-name">Victor Crest <span>26</span></p>
         <p class="ci-location">London</p>
-      </section>
-      <section class="counts">
+      </div>
+      <div class="counts">
         <div><p>80K<span>Followers</span></p></div>
         <div><p>803K<span>Likes</span></p></div>
         <div><p>1.4K<span>Photos</span></p></div>
-      </section>
+      </div>
     </div>
   </div>
 </body>
